DEV-1965: Support using client group IDs to execute cmd (#121)
